--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "references"]
 	path = references
-	url = git@github.com:jonsterling/bibtex-references.git
+  url = https://github.com/jonsterling/bibtex-references.git
